k8s-deployments/fill/application/templates/fill-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fill-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - fill-app.intendproject.eu
      secretName: fill-app-tls

  rules:
    - host: fill-app.intendproject.eu
      http:
        paths:
          # API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fill-app
                port:
                  number: 3000

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fill-dashboard
                port:
                  number: 80
